# stt-benchmark

./: .gitignore  README.md  env.example  pyproject.toml
docs/: adding-models.md  analysis.md  cli.md  measuring-ttfs.md
scripts/: README.md  create_hf_dataset.py  fix-ruff.sh  measure.py  pareto-frontier-plot.py  plot-config.json  tail_accuracy.py
scripts/runs/: run_debug.sh  run_deepgram_proxy_20260519.sh  run_deepgram_proxy_v2_20260521.sh  run_deepgram_proxy_vad_v2_20260521.sh  run_deepgram_proxy_vad_v2_refix_20260530.sh  run_deepgram_proxy_vad_v2_rerun_20260530_142747.sh  run_deepgram_test.sh  run_speech_proxy_test.sh
src/stt_benchmark/: __init__.py  config.py  models.py  nemotron_local_stt.py  services.py
src/stt_benchmark/analysis/: __init__.py  statistics.py
src/stt_benchmark/cli/: __init__.py  benchmark.py  debug.py  download.py  export.py  ground_truth.py  main.py  report.py  wer.py
src/stt_benchmark/dataset/: __init__.py  downloader.py
src/stt_benchmark/debug/: audio_source.py
src/stt_benchmark/docs/: analysis.md  cli.md
src/stt_benchmark/evaluation/: __init__.py  semantic_wer.py
src/stt_benchmark/ground_truth/: __init__.py  evaluate_run.py  gemini_transcriber.py  run_iteration.py  scribe_transcriber.py
src/stt_benchmark/observers/: __init__.py  metrics_collector.py  transcription_collector.py
src/stt_benchmark/pipeline/: __init__.py  benchmark_runner.py  service_factory.py  synthetic_transport.py
src/stt_benchmark/services_aiphoria/: aiphoria_stt.py  asr_backend.py  deepgram_exteou.py  deepgram_flux.py  deepgram_native.py  deepgram_proxy.py  eou.py
src/stt_benchmark/services_custom/: __init__.py  reson8_stt.py
src/stt_benchmark/storage/: __init__.py  database.py
